
syntax = "proto3";

option csharp_namespace = "GrpcEF.Protos";

package product;

service ProductSrv {

    rpc GetAll(Empty) returns (Products);
    rpc GetById(ProductRowIdFilter) returns (Product);
    rpc Post(Product) returns (Product);
    rpc Put (Product) returns (Product);
    rpc Delete (ProductRowIdFilter) returns (Empty);

}

message Empty {}

message Product{
    int32 ProductRowId = 1;
    int32 ProductId = 2;
    string Name = 3;
    int32 Price = 4;

}

message ProductRowIdFilter{

    int32 ProductRowId = 1;
}

message Products{
    repeated Product items = 1;
}